--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.1.3",
         "endroid/qrcode": "^3.9",
         "fideloper/proxy": "^4.0",
+        "goodnesskay/laravelpdfviewer": "^1.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "rap2hpoutre/laravel-log-viewer": "^1.7",
